# cookiecutter-python-uv

./: .gitignore  README.md  cookiecutter.json  hello.py  noxfile.py  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  README.md  noxfile.py  pyproject.old.toml  pyproject.toml
{{cookiecutter.project_name}}/nox_extra/: nox_pre_commit_sessions.py  nox_pytest_sessions.py  nox_utils.py
