[project]
name = "cookiecutter-python-uv"
version = "0.1.0"
description = "Default template for uv package"
readme = "README.md"
authors = [{ name = "redjax", email = "none@none.com" }]
dependencies = []
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["nox>=2024.4.15", "uv>=0.4.18", "cookiecutter>=2.6.0"]

[tool.uv]
dev-dependencies = [
    "cookiecutter>=2.6.0",
]
